objects/vlocity_cmt__VlocityAPIMetadata__c.object
<CustomObject>
    <fields>
        <fullName>vlocity_cmt__APIHandler__c</fullName>
        <label>API Handler</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__APIKey__c</fullName>
        <label>API Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__APIName__c</fullName>
        <label>API Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__APIParams__c</fullName>
        <label>API Params</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Vlocity API Metadata</label>
    <nameField>
        <displayFormat>API-{0000}</displayFormat>
        <label>Metadata Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Vlocity API Metadata</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>